011 - Gerência de imagens dentro do sistema e testes